[package]
name = "more-hq-client"
version = "0.5.0"
edition = "2021"
description = "Miraland release of Ore mining pool client."
license = "Apache-2.0"
repository = "https://github.com/miraland-labs/ore-hq-client"
keywords = ["solana", "crypto", "mining", "miraland", "mining-pool"]

[[bin]]
name = "ore-hq-client"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.13", features = ["derive"] }
core_affinity = "0.8.1"
ore-api = "2.1.0"
ore-utils = "2.1.0"
# drillx = "2.0.0"
drillx = { package = "marsh-drillx", version = "2.0.1" }
# drillx = { path = "../../regolith-labs/forks/drillx/drillx" }
futures-util = "0.3.30"
reqwest = "^0.11.0"
rpassword = "7.3.1"
solana-sdk = "1.18.12"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5.2"
spl-token = "6.0.0"
rayon = "1.10"
crossbeam = "0.8.0"
rand = "0.8.4"
rand_chacha = "0.3.0"

[profile.release]
opt-level = 3           # Full optimisations
codegen-units = 1       # Better optimization with fewer codegen units
lto = true              # Enable Link Time Optimization (LTO)
debug = false           # Disable debug info to reduce binary size
panic = 'abort'         # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
